--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" placeholder=Senha>
                 </div>
-                <button class="btn-loguin">Loguin</button>
+                <button class="btn-loguin">Login</button>
             </div>
         </div>
     </div>
