--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
             do centro universitario Unifacisa, com o objetivo de desenvolver, em nível de um anteprojeto
             arquitetônico de ambientação, o espaço de um escritório de advocacia localizado em um shopping.<br>
             OBS: Alencar advocacia se trata de uma empresa de
-            advocacia fictica.<br>
+            advocacia fictícia.<br>
 
         </P>
     </div>
