--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="escritorio.html">Escritorio</a></li>
                 <li><a href="projetistas.html">Projetistas</a></li>
-                <li><a href="Login.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
 
