--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p id="txt">
                         Escritório de Advocacia especializado em
                         Direito Digital e segurança da informação.
-                        Busca exelencia, umanização e experiência
+                        Busca exelencia, Humanização e experiência
                         profissional com clientes e colaboradores  
 
                     </p>
