--- a/sobre.html
+++ b/sobre.html
@@ -35,11 +35,10 @@
             Projeto arquitetônico:<br>
             Trabalho orientado pelo professor Eduardo Dantas e desenvolvido
             no semestre 2022.1 para a composição da nota da 1º unidade da 
-            disciplina de interiores II do  setimo período do curso de arquitetura e urbanismo
+            disciplina de Interiores II do  setimo período do curso de Arquitetura e Urbanismo
             do centro universitario Unifacisa, com o objetivo de desenvolver, em nível de um anteprojeto
             arquitetônico de ambientação, o espaço de um escritório de advocacia localizado em um shopping.<br>
-            OBS: Alencar advocacia se trata de uma empresa de
-            advocacia fictícia.<br>
+            OBS: Alencar Advocacia se trata de uma empresa fictícia.<br>
 
         </P>
     </div>
