--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
     </header>
     <div class="main-loguin">
         <div class="left-loguin">
-            <h1>Faça seu loguin <br>Para agendar um atendimento</h1>
+            <h1>Faça seu login <br>Para agendar um atendimento</h1>
             <img src="animation.svg" class="left-loguin-image">
         </div>
         <div class="right-loguin">
